<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yoga.example5.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_gen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/bt_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_men" />

                <RadioButton
                    android:id="@+id/bt_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_female" />
            </RadioGroup>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_interest" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/cb_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eat" />

            <CheckBox
                android:id="@+id/cb_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:id="@+id/cb_surf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surf" />

            <CheckBox
                android:id="@+id/cb_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/bt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result"/>

</LinearLayout>
